<resources>
    <string name="app_name">First UI Assignment</string>
    <string name="login_page">Login Page</string>
    <string name="todo">TODO</string>
    <string name="email_adress">Email adress</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_to_main">Back to Main</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="welcome_to_our_app">Welcome to Our App</string>
    <string name="the_logo">The Logo</string>
    <string name="login_page1">Login Page</string>
    <string name="register_page">Register Page</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="email_adress1">Email adress</string>
    <string name="phone_number">Phone Number</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_main1">Back to Main</string>
    <string name="i_agree_to_teams_conditions">I agree to Teams Conditions</string>
    <string name="or1">OR</string>
    <string name="sign_up1">SIGN UP</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login1">Login</string>
    <string name="back">back</string>
</resources>