<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logoicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214"
        tools:ignore="MissingConstraints" />

    <!--    container Email password-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528"
        tools:layout_editor_absoluteX="0dp">


        <EditText
            android:id="@+id/editText"
            android:layout_width="302dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/textlogin"
            android:hint="@string/email_adress"
            android:textColor="@color/black"
            android:textColorHint="#646464"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="302dp"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/textlogin"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textColorHint="#646464"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/button3"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.921"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.859" />

        <Button
            android:id="@+id/button"
            android:layout_width="209dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:backgroundTint="@drawable/button_color"
            android:text="@string/login"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="29dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#D3D3D3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/or"
            android:textColor="#000000"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#D3D3D3" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="197dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906" />

    <Button
        android:id="@+id/textViewSingUp"
        android:layout_width="101dp"
        android:layout_height="44dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/sign_up"
        android:textColor="#D02020"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <Button
        android:id="@+id/loginBackToMainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/back_to_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="128dp"
        android:layout_height="41dp"
        android:background="@drawable/rounded_corner_button"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/google"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <Button
        android:id="@+id/button5"
        android:layout_width="128dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/rounded_corner_button"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/facebook"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button4" />


</androidx.constraintlayout.widget.ConstraintLayout>